tests/pass/BXORAssign.java
package pass;

public class BXORAssign {

	public int bXORAssign(int x, int y) {
		int t = x;
		t ^= y;
		return t;
	}
}
