tests/fail/BORAssign.java
package fail;

public class BORAssign {
	
	public static void main(String[] args) {
		int t = 3;
		t |= "a";
	}	
}
